--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,66 @@
+# Developer's Note: This is a sample _config.yml file offered with
+# jekyll-theme-prologue for your convenience. To use it, move it to your
+# project's root directory. Please note that the following lines are
+# NECESSARY for Prologue to work correctly:
+#
+# theme: jekyll-theme-prologue
+# collections: [sections]
+#
+# They activate the theme and tell Jekyll to find your homepage content
+# in /_sections. Note where "sections" starts with an underscore
+# and where it doesn't. The social settings will make links to
+# Twitter, etc., but only if you give the URL.
+#
+# Also, be sure to customize url and baseurl for your site.
+#
+# ---------------------------------------------------------------
+#
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: Madeyedexter's Blog
-url: "https://madeyedexter.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
-baseurl: "/" # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
-#timezone: Asia/Chongqing
-description: >
-  This is personal portfolio site of Danish Kamal.
-
-# Your information
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Danish Kamal
+subtitle: There is no spoon
+description: >- # this means to ignore newlines until "baseurl:"
+  This is the demo site for a Jekyll theme version of
+  HTML5 UP's sleek, responsive site template Prologue.
+author: Danish Kamal
 email: madeyedexter92@gmail.com
-author: Madeyedexter
-avatar: "//www.gravatar.com/avatar/46f0507196b8e70f55b0c57e570c3408?d=mm&s=135"
-profile: Hello! I am just passing by.
-#twitter_username: twitter_username
-github_username:  Madeyedexter
+avatar: assets/images/avatar.jpg
 
-# Comment Service (Disqus or 多说)
-#  choose one and un-comment the line to active it
-#disqus_shortname: xxx   # get one: https://disqus.com/admin/signup/
-#duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
+# You'll want to customize url and baseurl for your own site:
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://madeyedexter.github.io" # the base hostname & protocol for your site
 
-permalink: /archivers/:title
-gems:
- - jekyll-paginate
- - jekyll-gist
- - jemoji
+# Social settings
+# Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
+twitter_url:
+facebook_url: https://www.facebook.com/madeyedexter
+googleplus_url: https://plus.google.com/u/0/+DanishKamaal
+instagram_url:
+linkedin_url: https://www.linkedin.com/in/danish-kamaal-91635438/
+github_url: https://github.com/Madeyedexter
+pinterest_url: https://in.pinterest.com/Madeyedexter
+slack_url:
+dribbble_url:
+goodreads_url: https://www.goodreads.com/Madeyedexter
+stackoverflow_url: https://stackoverflow.com/users/1669314/madeyedexter
+quora_url: https://www.quora.com/profile/Danish-Kamaal
 
-# Build settings
-paginate: 5
-paginate_path: "page:num"
+# Google Analytics Tracking ID goes here:
+google_analytics: UA-125793008-1
 
-highlighter: rouge
-markdown: kramdown
-
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+# The following settings are NECESSARY for the Prologue theme to run:
+theme: jekyll-theme-prologue
+collections: [sections]
